# quant-lite

./: LICENSE  README.md  backtester.py  example.ipynb  main.py  pyproject.toml
benchmarks/: README.md  benchmark_engine.py
example/: backtest_engine.ipynb  backtest_engine.py  basic_usage.py  example.ipynb
tests/: test_backtester.py
