[project]
name = "quant-lite"
version = "0.1.0"
description = "A backtest engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottleneck>=1.6.0",
    "jupyter>=1.1.1",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pytest>=9.0.2",
    "yfinance>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
